# Rusty-Firmware

./: .gitignore  Cargo.toml  README.md  SECURITY.md  cargo.toml  memory.x  openocd.cfg
.cargo/: config
.github/workflows/: rust.yaml
src/: main.rs
