[package]
name = "rusty-blink"
version = "0.1.0"
edition = "2018"
authors = ["Manny <manny.coffee-dev@pm.me>"]

[profile.release]
opt-level = 'z' # turn on maximum optimizations. We only have 64kB
lto = true      # Link-time-optimizations for further size reduction

[dependencies]
cortex-m = "^0.6.3"      # Access to the generic ARM peripherals
cortex-m-rt = "^0.6.12"  # Startup code for the ARM Core
embedded-hal = "^0.2.4"  # Access to generic embedded functions (`set_high`)
panic-halt = "^0.2.0"    # Panic handler

[dependencies.stm32g0]
version = "0.12.1"
features = ["stm32g031", "rt"]

[dependencies.stm32g0xx-hal]
version = "0.0.9"
features = ["rt", "stm32g031"]
